# photography-portfolio

backend/: .env  Cargo.toml
backend/release/local_development/: dockerfile.backend
backend/resources/: photoInfo.json
backend/src/: main.rs  routes.rs
backend/src/handlers/: mod.rs  retrieve_all_photo_metadata.rs  retrieve_photos_by_id.rs  retrieve_single_photo_metadata.rs
backend/src/models/: errors.rs  mod.rs  photo_info.rs
backend/src/utils/: config.rs  loader.rs  mod.rs  retrieve_metadata_by_id.rs  validate_image_paths.rs
backend/tests/: get_all_photo_metadata.rs  get_photo_metadata_by_id.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/pages/: About.tsx  Gallery.tsx  Home.tsx
frontend/src/components/utils/: APIcalls.tsx  BottomNav.tsx  Loader.tsx  Models.tsx  PageTransition.tsx  TopNav.tsx
kubernetes/dev/backend/: Chart.yaml  values.yaml
kubernetes/dev/backend/templates/: deployment.yaml  service.yaml
resources/: .gitignore
resources/data/: photoInfo.json
