[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
env_logger = "0.10"
dotenv = "0.15"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }